# DarwinFfmpegArcana

./: .gitignore  Notes.md  README.md  scratch.md
FfmpegArcana/: Package.swift
FfmpegArcana/Sources/CFfmpegWrapper/: ff_cmd.cpp  ffmpeg_wrapper.c  media_fifo.cpp
FfmpegArcana/Sources/CFfmpegWrapper/fifo/: bound_fifo_impl.hpp  circular_fifo.hpp  default_semaphore_impl.cpp  default_semaphore_impl.hpp  sproqet_defines.hpp
FfmpegArcana/Sources/CFfmpegWrapper/include/: ff_cmd.h  ffmpeg_wrapper.h  media_fifo.h  module.modulemap
FfmpegArcana/Sources/FfmpegArcana/: CmdFifo.swift  FfmpegArcana.swift  MediaFifo.swift  VideoDecoder.swift
FfmpegArcana/Sources/FfmpegArcana/Pipeline/: ParameterSet.swift  Pipeline.swift  PipelineComponent.swift  PipelineTypes.swift
FfmpegArcana/Sources/FfmpegArcana/Pipeline/Components/: CameraSource.swift  DisplaySink.swift  MicrophoneSource.swift
FfmpegArcana/Sources/FfmpegArcana/Pipeline/Components/display/: DisplayRenderer.swift  DisplaySink.swift  IOSDisplayRenderer.swift  MacOSDisplayRenderer.swift  structure.md
FfmpegArcana/Sources/FfmpegArcana/Pipeline/Ports/: InputPorts.swift  OutputPorts.swift
FfmpegArcana/Tests/FfmpegArcanaTests/: FfmpegArcanaTests.swift
FfmpegArcanaApp/FfmpegArcanaApp/: ContentView.swift  FfmpegArcanaAppApp.swift
FfmpegArcanaApp/FfmpegArcanaApp.xcodeproj/: project.pbxproj
FfmpegArcanaCam/FfmpegArcanaCam/: CameraCaptureManager.swift  CameraPreviewView.swift  FfmpegArcanaCamApp.swift  HDMIDisplayManager.swift  Info.plist
FfmpegArcanaCam/FfmpegArcanaCam.xcodeproj/: project.pbxproj
FfmpegArcanaTestHarness/: CMakeLists.txt  build.sh  main.swift
ffmpeg/: build-ffmpeg.sh
